testdata/golden/sema/invalid/attrs_send_nosend_conflict/only.fmt
// Test: @send and @nosend conflict

// This should fail with SEM3062
@send
@nosend
type ConflictType = {
    x: int
}
